force-app/main/default/objects/sfmc_ees_email_snapshot_534007695__dll/fields/ConversionLikelihood__c.field-meta.xml
<CustomField>
    <fullName>ConversionLikelihood__c</fullName>
    <label>Conversion Likelihood</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>ConversionLikelihood</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>