force-app/main/default/objects/sfmc_ees_email_snapshot_534007695__dll/fields/EmailClickLikelihood__c.field-meta.xml
<CustomField>
    <fullName>EmailClickLikelihood__c</fullName>
    <label>Email Click Likelihood</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>EmailClickLikelihood</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>