force-app/main/default/objects/sfmc_ees_email_snapshot_534007695__dll/fields/EmailClickScore__c.field-meta.xml
<CustomField>
    <fullName>EmailClickScore__c</fullName>
    <label>Email Click Score</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>EmailClickScore</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>