force-app/main/default/objects/sfmc_ees_email_snapshot_534007695__dll/fields/EmailEngagementPersona__c.field-meta.xml
<CustomField>
    <fullName>EmailEngagementPersona__c</fullName>
    <label>Email Engagement Persona</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>EmailEngagementPersona</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>