force-app/main/default/objects/sfmc_ees_email_snapshot_534007695__dll/fields/KQ_SubscriberKey__c.field-meta.xml
<CustomField>
    <fullName>KQ_SubscriberKey__c</fullName>
    <label>KQ_SubscriberKey</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_SubscriberKey</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>